@@ -1,5 +1,7 @@
 Changelog for mk-heartbeat:
 
+   * --check output contained leading whitespace which broke Cacti.
+
 2008-03-16: version 1.0.8
 
    * Added --setvars option (bug #1904689, bug #1911371).
